drkns 18.04.2020 18:47:55 +0300 - build 197

1. Рефакторинг. Том III. Используем fmt вместо printf.

drkns 17.04.2020 20:21:44 +0300 - build 196

1. Forum: Process List plugin does not show environment and command line
   x86 версия чудовищно работала в WOW64.

drkns 17.04.2020 03:04:16 +0300 - build 195

1. Добавлено получение командной строки через WMI.

drkns 16.04.2020 19:38:03 +0300 - build 194

1. В 193 отвалилось получение битности процессов.

2. Не работало отображение _Total.

drkns 11.04.2020 03:32:43 +0300 - build 193

1. Рефакторинг. Том II.

2. Ещё кое-где сняты ограничения на длину строк.

3. Поддержка float-форматирования размеров в стиле Far.

4. Исправлены баги, как новые, так и старые.

drkns 01.04.2020 23:49:29 +0300 - build 192

1. Рефакторинг. Том I.

2. Форматирование.

3. Во многих местах сняты ограничения на длину строк.

4. Не работало отображение хендлов.

5. Неправильно рассчитывался аптайм процессов.

6. Не работала индикация режима сортировки.

drkns 25.03.2020 10:32:35 +0200 - build 191

1. Incorrect COM initialisation.

drkns 04.02.2020 19:06:35 +0000 - build 190

1. Correction of 189.

drkns 22.01.2020 01:30:39 +0000 - build 189

1. 0003764: FAR/ProcessList x64 doesn't show modules for 32-bit .exe

drkns 18.11.2018 23:16:41 +0000 - build 188

1. Некорректная работа с настройками - более одного экземпляра PluginSettings.

drkns 23.04.2018 22:28:15 +0100 - build 187

1. С форума - долго закрывается панель плагина.

drkns 12.11.2017 20:00:38 +0000 - build 186

1. 0003552: В деталях процесса в CommandLine 128-ой символ строки *всегда* заменяется на символ "*" (звездочка) - его кто-то перезаписывает

drkns 19.11.2016 12:30:09 +0200 - build 185

1. Размер колонок XI и XC по умолчанию 6.

drkns 15.06.2016 19:00:05 +0200 - build 184

1. Вернём хак с атрибутами.

drkns 15.06.2016 01:27:45 +0200 - build 183

1. Восстановим работоспособность колонки XB (битность процесса, 32/64) и включим её по умолчанию в 1 и 3 режимах.
