@@ -16,28 +16,28 @@
 "Шлях"
 
 "-бітны"
-"Модуль"
-"Поўны шлях"
-"PID"
-"Бацькоўскі PID"
-"Пяршынства"
-"Нітак"
-"Запушчаны"
-"Выконваецца"
+"Модуль:"
+"Поўны шлях:"
+"PID:"
+"Бацькоўскі PID:"
+"Пяршынства:"
+"Нітак:"
+"Запушчаны:"
+"Выконваецца:"
 
-"Памер усіх модулей"
-"Памер кучы памяці"
+"Памер усіх модулей:"
+"Памер кучы памяці:"
 
-"Акно"
-"Стыль акна"
-"Пашыраны стыль"
+"Акно:"
+"Стыль акна:"
+"Пашыраны стыль:"
 
 "Выдаленне працесу"
-"Вы жадаеце выдаліць \"%.40s\""
-"Выдаліць адмечаныя працесы"
-"Вы жадаеце выдаліць %d працэсаў"
+"Вы жадаеце выдаліць \"{0}\"?"
+"Выдаліць адмечаныя працесы?"
+"Вы жадаеце выдаліць {0} працэсаў?"
 "Выдаліць"
-"Не атрымалася выдаліць \"%.40s\""
+"Не атрымалася выдаліць \"{0}\""
 
 "Не атрымалася выдаліць працэс"
 "Паспрабаваць з адладкавымі прывілеямі?"
@@ -65,15 +65,15 @@
 "Змяніць прыярытэт"
 "Вы жадаеце змяніць прыярытэт для ўсіх абраных прйцэсаў"
 
-"Аб'ектаў GDI"
-"Аб'ектаў USER"
+"Аб'ектаў GDI:"
+"Аб'ектаў USER:"
 
 "Камандны радок:"
 "Бягучы каталог:"
 "Зменныя асяроддзя:"
 
-"Версія файлу"
-"Апісанне"
+"Версія файлу:"
+"Апісанне:"
 
 "Модулі:"
 "База"
@@ -157,7 +157,7 @@
 "VM Памер"
 "VM Пік"
 
-"/сек"
+"/с"
 
 "Парадкаваць"
 "&Імя                           Ctrl-F3"
@@ -170,8 +170,8 @@
 "Ужывць &суполкі парадкавання   Shift-F11"
 "А&дмечаныя файлы ўперад        Shift-F12"
 
-"Уладальнік"
-"Сеанс"
+"Уладальнік:"
+"Сеанс:"
 
 "Адмоўлена ў доступе"
 "Недастаткова прівілеяў"
