@@ -16,28 +16,28 @@
 "Pathname"
 
 "-bit"
-"Module"
-"Full path"
-"PID"
-"Parent PID"
-"Priority"
-"Threads"
-"Started at"
-"Uptime"
+"Module:"
+"Full path:"
+"PID:"
+"Parent PID:"
+"Priority:"
+"Threads:"
+"Started at:"
+"Uptime:"
 
-"Size of all modules"
-"Memory heap size"
+"Size of all modules:"
+"Memory heap size:"
 
-"Window title"
-"Window style"
-"Extended style"
+"Window title:"
+"Window style:"
+"Extended style:"
 
 "Kill process"
-"Do you wish to kill \"%.40s\""
-"Kill selected processes"
-"Do you wish to kill %d processes"
+"Do you wish to kill \"{0}\"?"
+"Kill selected processes?"
+"Do you wish to kill {0} processes?"
 "Kill"
-"Cannot kill \"%.40s\""
+"Cannot kill \"{0}\""
 
 "Cannot kill the process"
 "Retry with debug privileges?"
@@ -65,15 +65,15 @@
 "Change Priority"
 "Do you want to change priorities of the selected processes?"
 
-"GDI Objects"
-"USER Objects"
+"GDI Objects:"
+"USER Objects:"
 
 "Command Line:"
 "Current Directory:"
 "Environment:"
 
-"File version"
-"Description"
+"File version:"
+"Description:"
 
 "Modules:"
 "Base"
@@ -170,8 +170,8 @@
 "Use sort &groups      Shift-F11"
 "Show selected &first  Shift-F12"
 
-"Owner"
-"Session"
+"Owner:"
+"Session:"
 
 "Access denied"
 "Insufficient privilege"
