@@ -6,38 +6,38 @@
 
 "► Lista Processi"
 
-"Moduli          "
-"Priorita'       "
-"PtID            "
-"Bt              "
-"GDI             "
-"Utente          "
-"Titolo Finestra "
-"Percorso        "
+"Moduli"
+"Priorita'"
+"PtID"
+"Bt"
+"GDI"
+"Utente"
+"Titolo Finestra"
+"Percorso"
 
 "-bit"
-"Modulo          "
-"Percorso        "
-"PID             "
-"PID Precedente  "
-"Priorita'       "
-"Threads         "
-"Avviato A       "
-"Attivo Da       "
+"Modulo:"
+"Percorso:"
+"PID:"
+"PID Precedente:"
+"Priorita':"
+"Threads:"
+"Avviato A:"
+"Attivo Da:"
 
-"Dim. Moduli     "
-"Dim. MemoriaHeap"
+"Dim. Moduli:"
+"Dim. MemoriaHeap:"
 
-"Titolo Finestra "
-"Stile Finestra  "
-"Stile Esteso    "
+"Titolo Finestra:"
+"Stile Finestra:"
+"Stile Esteso:"
 
 "Termina Processo"
-"Vuoi Terminare \"%.40s\""
-"Termina I Processi Selezionati"
-"Vuoi Terminare %d Processi"
+"Vuoi Terminare \"{0}\"?"
+"Termina I Processi Selezionati?"
+"Vuoi Terminare {0} Processi?"
 "Termina!"
-"Non Posso Terminare \"%.40s\""
+"Non Posso Terminare \"{0}\""
 
 "Non Posso Eliminare Il Processo"
 "Rirpovo Con Privilegi Di Debug?"
@@ -49,7 +49,7 @@
 "&Computer:"
 "(lasciare vuoto per il pc locale)"
 "Nome Utente:"
-"Password   :"
+"Password:"
 "(lasciare vuoto per il pc locale)"
 
 "Connessione..."
@@ -65,15 +65,15 @@
 "Cambia Priorita'"
 "Vuoi Cambiare Priorita' Al Processo Selezionato?"
 
-"Oggetti GDI"
-"Oggetti USER"
+"Oggetti GDI:"
+"Oggetti USER:"
 
 "Linea Di Comando:"
 "Cartella Corrente:"
 "Ambiente:"
 
-"Versione File"
-"Descrizione"
+"Versione File:"
+"Descrizione:"
 
 "Moduli:"
 "Base"
@@ -99,27 +99,27 @@
 "&Handles (Solo NT Locale)"
 "Includi Handles Senza Nome"
 
-"Tempo CPU         "
+"Tempo CPU"
 "Tempo Privilegiato"
-"Tempo Utente      "
-"Numero Handle     "
-"Page Faults       "
-"Page File Bytes   "
+"Tempo Utente"
+"Numero Handle"
+"Page Faults"
+"Page File Bytes"
 "Page File Bytes Peak"
 "Pool Nonpaged Bytes"
-"Pool Paged Bytes  "
-"Private Bytes     "
-"Working Set       "
-"Working Set Peak  "
-"IO Data Bytes     "
+"Pool Paged Bytes"
+"Private Bytes"
+"Working Set"
+"Working Set Peak"
+"IO Data Bytes"
 "IO Data Operations"
-"IO Other Bytes    "
+"IO Other Bytes"
 "IO Other Operations"
-"IO Read Bytes     "
+"IO Read Bytes"
 "IO Read Operations"
-"IO Write Bytes    "
+"IO Write Bytes"
 "IO Write Operations"
-"Virtual Bytes     "
+"Virtual Bytes"
 "Virtual Bytes Peak"
 
 "CPU Time"
@@ -170,8 +170,8 @@
 "&Usa Gruppi Ordinamento [Shift-F11]"
 "&Mostra Selezionati     [Shift-F12]"
 
-"Proprietario"
-"Sessione"
+"Proprietario:"
+"Sessione:"
 
 "Accesso Negato"
 "Privilegi Non Sufficienti"
