@@ -16,28 +16,28 @@
 "Ścieżka"
 
 "-bit"
-"Moduł"
-"Pełna ścieżka"
-"PID"
-"PID rodzica"
-"Priorytet"
-"Wątki"
-"Uruchomiony od"
-"Czas działania"
+"Moduł:"
+"Pełna ścieżka:"
+"PID:"
+"PID rodzica:"
+"Priorytet:"
+"Wątki:"
+"Uruchomiony od:"
+"Czas działania:"
 
-"Size of all modules"
-"Memory heap size"
+"Size of all modules:"
+"Memory heap size:"
 
-"Tytuł Okna"
-"Styl okna"
-"Styl rozszerzony"
+"Tytuł Okna:"
+"Styl okna:"
+"Styl rozszerzony:"
 
 "Zakończ proces"
-"Chcesz zabić proces \"%.40s\""
-"Zabij zaznaczone procesy"
-"Chces zabić %d procesów"
+"Chcesz zabić proces \"{0}\"?"
+"Zabij zaznaczone procesy?"
+"Chces zabić {0} procesów?"
 "Zakończ"
-"Nie mogę zakończyć \"%.40s\""
+"Nie mogę zakończyć \"{0}\""
 
 "Nie mogę zamknąć procesu"
 "Spróbować na uprawnieniach debugowania?"
@@ -65,15 +65,15 @@
 "Zmień priorytet"
 "Chcesz zmienić priorytet zaznaczonych procesów?"
 
-"Obiekty GDI"
-"Obiekty USER"
+"Obiekty GDI:"
+"Obiekty USER:"
 
 "Linia poleceń:"
 "Bieżączy folder:"
 "Środowisko:"
 
-"Wersja pliku"
-"Opis"
+"Wersja pliku:"
+"Opis:"
 
 "Moduły:"
 "Adres"
@@ -170,8 +170,8 @@
 "Użyj &grup sort.      Shift-F11"
 "&Najpierw zaznaczone  Shift-F12"
 
-"Właściciel"
-"Sesja"
+"Właściciel:"
+"Sesja:"
 
 "Brak dostępu"
 "Brak uprawnień"
