@@ -16,28 +16,28 @@
 "Pathname"
 
 "-битный"
-"Модуль"
-"Полный путь"
-"PID"
-"Parent PID"
-"Приоритет"
-"Нитей"
-"Запущен"
-"Выполняется"
+"Модуль:"
+"Полный путь:"
+"PID:"
+"Parent PID:"
+"Приоритет:"
+"Нитей:"
+"Запущен:"
+"Выполняется:"
 
-"Размер всех модулей"
-"Memory heap size"
+"Размер всех модулей:"
+"Memory heap size:"
 
-"Окно"
-"Стиль окна"
-"Расшир. стиль"
+"Окно:"
+"Стиль окна:"
+"Расшир. стиль:"
 
 "Удаление процесса"
-"Вы хотите удалить \"%.40s\""
-"Удалить отмеченные процессы"
-"Вы хотите удалить %d процессов"
+"Вы хотите удалить \"{0}\"?"
+"Удалить отмеченные процессы?"
+"Вы хотите удалить {0} процессов?"
 "Удалить"
-"Не удалось удалить \"%.40s\""
+"Не удалось удалить \"{0}\""
 
 "Не удалось удалить процесс"
 "Попробовать с отладочными привилегиями?"
@@ -65,15 +65,15 @@
 "Изменить приоритет"
 "Вы хотите изменить приоритет для всех выделенных процессов?"
 
-"Объектов GDI"
-"Объектов USER"
+"Объектов GDI:"
+"Объектов USER:"
 
 "Командная строка:"
 "Текущий каталог:"
 "Переменные окружения:"
 
-"Версия файла"
-"Описание"
+"Версия файла:"
+"Описание:"
 
 "Модули:"
 "База"
@@ -157,7 +157,7 @@
 "VM Размер"
 "VM Пик"
 
-"/сек"
+"/с"
 
 "Критерий сортировки"
 "&Имя                             Ctrl-F3"
@@ -170,8 +170,8 @@
 "Использовать &группы сортировки  Shift-F11"
 "&Помеченные файлы вперед         Shift-F12"
 
-"Владелец"
-"Сеанс"
+"Владелец:"
+"Сеанс:"
 
 "Отказано в доступе"
 "Недостаточно привилегий"
