@@ -1,3 +1,7 @@
+drkns 19.04.2020 01:44:38 +0300 - build 198
+
+1. Продолжение 197.
+
 drkns 18.04.2020 18:47:55 +0300 - build 197
 
 1. Рефакторинг. Том III. Используем fmt вместо printf.
